[SPARK-53229][CORE][SQL][EXAMPLES][TESTS] Use Java `Map.of` instead of `ImmutableMap.of`
### What changes were proposed in this pull request?

This PR aims to use Java 9+ `Map.of` API instead of `ImmutableMap.of` API. Mostly, test files are changed and one MLLib example, `JavaStratifiedSamplingExample.java`, is updated.

### Why are the changes needed?

Java's native API is **shorter and faster**.

```scala
scala> spark.version
val res0: String = 4.1.0-preview1

scala> spark.time((1 until 100_000_000).foreach(_ => java.util.Map.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)))
Time taken: 2171 ms

scala> spark.time((1 until 100_000_000).foreach(_ => com.google.common.collect.ImmutableMap.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)))
Time taken: 3246 ms
```

### Does this PR introduce _any_ user-facing change?

No behavior change.

### How was this patch tested?

Pass the CIs.

### Was this patch authored or co-authored using generative AI tooling?

No.

Closes #51954 from dongjoon-hyun/SPARK-53229.

Authored-by: Dongjoon Hyun <dongjoon@apache.org>
Signed-off-by: yangjie01 <yangjie01@baidu.com>