@@ -352,15 +352,15 @@ public class RetryingBlockTransferorSuite {
             new TimeoutException());
     IOException ioException = new IOException();
     List<? extends Map<String, Object>> interactions = Arrays.asList(
-            ImmutableMap.of("b0", saslExceptionInitial),
-            ImmutableMap.of("b0", ioException),
-            ImmutableMap.of("b0", saslExceptionInitial),
-            ImmutableMap.of("b0", ioException),
-            ImmutableMap.of("b0", saslExceptionFinal),
+            Map.of("b0", saslExceptionInitial),
+            Map.of("b0", ioException),
+            Map.of("b0", saslExceptionInitial),
+            Map.of("b0", ioException),
+            Map.of("b0", saslExceptionFinal),
             // will not get invoked because the connection fails
-            ImmutableMap.of("b0", ioException),
+            Map.of("b0", ioException),
             // will not get invoked
-            ImmutableMap.of("b0", block0)
+            Map.of("b0", block0)
     );
     configMap.put("spark.shuffle.sasl.enableRetries", "true");
     performInteractions(interactions, listener);
